--- a/tasks/zsh.yml
+++ b/tasks/zsh.yml
@@ -30,3 +30,10 @@
       replace: yes
     tags:
       - zsh
+  - name: Install Starship
+    copy:
+      src: ./zsh/starship.toml
+      dest: ~/.config/starship.toml
+      replace: yes
+      tags:
+        - zsh
